fix: apply Guardian compliance fixes (21 issues addressed)